@@ -29,6 +29,7 @@ VERSION 2.7-Beta 1
     * New optional dependency for Amazon downloads: clamz.
 
   BUGFIXES:
+    * Create collections even for SD/MMC/etc. cards on PCI-connected slots.
     * Fixed some incorrect logic in the PlaylistLength constraint, which was
       causing the APG to create playlists that were shorter than expected.
       (BR 293616)
